# data_transformation_common_pattern_dbt

./: .agent_instructions.md  .gitignore  .sqlfluff  Dockerfile  README.md  Taskfile.yml  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
data/pattern_1_sessionization_raw_data/date=2026-02-19/: events.csv
data/pattern_1_sessionization_raw_data/date=2026-02-23/: events.csv
data/pattern_1_sessionization_raw_data/date=2026-02-24/: events.csv
data_generator/: pattern_1_sessionization.py
docker/: Dockerfile  ducklake_ui_server.py  nginx.conf
macros/: example_macro.sql
models/: schema.yml
models/pattern_1_sessionization/marts/: fct_sessions.sql
models/pattern_1_sessionization/raw/: raw_events.sql  sources.yml
models/pattern_1_sessionization/staging/: stg_events.sql  stg_sessionized_events.sql
seeds/pattern_1_sessionization_raw_data/date=2026-02-18/: events.csv
seeds/pattern_1_sessionization_raw_data/date=2026-02-20/: events.csv
seeds/pattern_1_sessionization_raw_data/date=2026-02-21/: events.csv
seeds/pattern_1_sessionization_raw_data/date=2026-02-22/: events.csv
seeds/pattern_1_sessionization_raw_data/date=2026-02-25/: events.csv
