[project]
name = "data_transformation_common_pattern_dbt"
version = "0.1.0"
description = "dbt project with DuckDB"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "dbt-core==1.11.6",
    "dbt-duckdb==1.10.1",
]

[dependency-groups]
dev = [
    "sqlfluff>=3.4.2",
    "sqlfluff-templater-dbt>=3.4.2",
]
